--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -5,14 +5,56 @@
 <html>
 
     <head>
+        <meta charset="UTF-8"/>
+
         <title>Rango</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scaleble=no"/>
+
+        <!-- Bootstrap core CSS -->
+        <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <link href="https://getbootstrap.com/docs/3.3/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
 
     <body>
-        <h1>Rango says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
-        <a href="/rango/about/">About</a><br />
-        <img src="{% static "image/jingpai/test.jpg" %}" alt="jingpai test pics" /> <!-- New line -->
+
+    <!--设置导航块-->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!--左上角Logo-->
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand" style="margin: 0;padding: 0;">
+                    <img src="{% static 'image/jingpai/Jing-Logo.png' %}" alt="Jing Brand Logo" style="height: 50px;"/>
+                </a>
+                <!--小屏幕下显示的展开按钮-->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+
+            <!--四个导航选项-->
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right" style="margin-top: 0;">
+                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-object-align-bottom"></span> Jing Brand</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-glass"></span> Jing Product</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Join Us</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
 
     {% if events %}
         {% for event in events %}
@@ -23,6 +65,16 @@
     {% else%}
         <p>there is no events</p>
     {% endif %}
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+        <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="https://getbootstrap.com/docs/3.3/assets/js/ie10-viewport-bug-workaround.js"></script>
     </body>
 
 </html>
