--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -59,8 +59,9 @@
     {% if events %}
         {% for event in events %}
         <h1>{{ event.name }}</h1>>
-        <p>{{ event.event_date }}</p>
-        <p>{{ event.event_des }}</p>
+        <p>{{ event.date }}</p>
+        <p>{{ event.des }}</p>
+        <img src="media/{{ event.img }}" alt="{{ event.name }}"/>
         {% endfor %}
     {% else%}
         <p>there is no events</p>
