--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -23,6 +23,8 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+        <link rel="stylesheet" href="{% static 'css/jingpai/jingpai.css' %}"/>
     </head>
 
     <body>
@@ -32,8 +34,8 @@
         <div class="container">
             <!--左上角Logo-->
             <div class="navbar-header">
-                <a href="#" class="navbar-brand" style="margin: 0;padding: 0;">
-                    <img src="{% static 'image/jingpai/Jing-Logo.png' %}" alt="Jing Brand Logo" style="height: 50px;"/>
+                <a href="#" class="navbar-brand logo-bar">
+                    <img src="{% static 'image/jingpai/Jing-Logo.png' %}" alt="Jing Brand Logo" class="logo"/>
                 </a>
                 <!--小屏幕下显示的展开按钮-->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
@@ -45,7 +47,7 @@
 
             <!--四个导航选项-->
             <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav navbar-right" style="margin-top: 0;">
+                <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-object-align-bottom"></span> Jing Brand</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-glass"></span> Jing Product</a></li>
@@ -55,6 +57,25 @@
 
         </div>
     </nav>
+
+    <div id="myCarousel" class="carousel slide">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{% static 'image/jingpai/9.png' %}" alt="1st"/>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/jingpai/12.png' %}" alt="2nd"/>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/jingpai/16.png' %}" alt="3rd"/>
+            </div>
+        </div>
+    </div>
 
     {% if events %}
         {% for event in events %}
