--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -83,6 +83,56 @@
         </div>
     </div>
 
+    <div class="tab1">
+        <div class="container">
+            <h2 class="tab-h2">Jing Product</h2>
+            <p class="tab-p">Jing: Male Tonic</p>
+            <!--劲酒描述-->
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img src="{% static 'image/jingpai/product-jingjiu.jpg' %}" alt="jing liquor" class="media-object">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">JING Liqueur</h4>
+                            <p>
+                                JING Liqueur is lskdjfsl  sldfjslf aldjflsf slfjdslkfj sldfjsldfjsd
+                                slflfjsdljfsdlf  slfjklsdjflsjf lsjflsdkfjdslfj  lskjflksdjfs fslf j
+                                slfjdksjfsljfdsklfjlsjf sljfkldsjf lsjflkdsjfsd fsldfjslf
+                                slfjdsklfj sdlfjldsjfsjlsjflkdsjfslfjldsjf lsjflksjf
+                            </p>
+                            <p>
+                                jlsjfkldsjflkdsjflkdsjflkj dslkjflkdsjf sdfjldkfj
+                                ldfjdskljf dlkfjdklsjf slfjsdlkfj dslfjdslkjf lsjflsdj
+                                dlfjsdklfj sdlfjlsdjf sldjfldsjf sldfjlksdjf sdlfjs lf
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--药材介绍-->
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="col-md-4">yao cai tu pian</div>
+                    <div class="col-md-8">yao cai jie shao</div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="col-md-4">yao cai tu pian</div>
+                    <div class="col-md-8">yao cai jie shao</div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="col-md-4">yao cai tu pian</div>
+                    <div class="col-md-8">yao cai jie shao</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% if events %}
         {% for event in events %}
         <h1>{{ event.name }}</h1>>
