--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -2,157 +2,285 @@
 
 {% load staticfiles %} <!-- New line -->
 
-<html>
-
+<html lang="en">
     <head>
-        <meta charset="UTF-8"/>
+        <!-- Title -->
+        <title>Unify - Responsive Website Template</title>
 
-        <title>Rango</title>
+        <!-- Required Meta Tags Always Come First -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scaleble=no"/>
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="favicon.ico">
 
-        <!-- Bootstrap core CSS -->
-        <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Google Fonts -->
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans%3A400%2C300%2C500%2C600%2C700">
 
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <link href="https://getbootstrap.com/docs/3.3/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+        <!-- CSS Global Compulsory -->
+        <link rel="stylesheet" href="{% static 'assets/vendor/bootstrap/bootstrap.min.css' %}">
 
+        <!-- CSS Implementing Plugins -->
+        <link rel="stylesheet" href="{% static 'assets/vendor/icon-awesome/css/font-awesome.min.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/icon-hs/style.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/icon-line-pro/style.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/dzsparallaxer/dzsparallaxer.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/dzsparallaxer/dzsscroller/scroller.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/dzsparallaxer/advancedscroller/plugin.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/slick-carousel/slick/slick.css' %}">
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+        <link rel="stylesheet" href="{% static 'assets/vendor/animate.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/hs-megamenu/src/hs.megamenu.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/vendor/hamburgers/hamburgers.min.css' %}">
 
-        <link rel="stylesheet" href="{% static 'css/jingpai/jingpai.css' %}"/>
+        <!-- CSS Unify -->
+        <link rel="stylesheet" href="{% static 'assets/css/unify.css' %}">
+
+        <!-- CSS Customization -->
+        <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
     </head>
 
-    <body>
+  <body>
+    <main>
+      
+      <!-- Header -->
+      <header id="js-header" class="u-header u-header--static">
+        <div class="u-header__section u-header__section--light g-bg-white g-transition-0_3 g-py-10">
+          <nav class="js-mega-menu navbar navbar-toggleable-md">
+            <div class="container">
+              <!-- Responsive Toggle Button -->
+              <button class="navbar-toggler navbar-toggler-right btn g-line-height-1 g-brd-none g-pa-0 g-pos-abs g-right-0" type="button"
+                      aria-label="Toggle navigation"
+                      aria-expanded="false"
+                      aria-controls="navBar"
+                      data-toggle="collapse"
+                      data-target="#navBar">
+                <span class="hamburger hamburger--slider">
+                  <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                  </span>
+                </span>
+              </button>
+              <!-- End Responsive Toggle Button -->
 
-    <!--设置导航块-->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!--左上角Logo-->
-            <div class="navbar-header">
-                <a href="#" class="navbar-brand logo-bar">
-                    <img src="{% static 'image/jingpai/Jing-Logo.png' %}" alt="Jing Brand Logo" class="logo"/>
-                </a>
-                <!--小屏幕下显示的展开按钮-->
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
+              <!-- Logo -->
+              <a href="{% url 'index' %}" class="navbar-brand">
+                <img src="{% static 'image/jingpai/Jing-Logo.png' %}" alt="Image Description">
+              </a>
+              <!-- End Logo -->
 
-            <!--四个导航选项-->
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-object-align-bottom"></span> Jing Brand</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-glass"></span> Jing Product</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Join Us</a></li>
+              <!-- Navigation -->
+              <div class="collapse navbar-collapse align-items-center flex-sm-row g-pt-10 g-pt-5--lg g-mr-40--lg" id="navBar">
+                <ul class="navbar-nav text-uppercase g-pos-rel g-font-weight-600 ml-auto">
+                  <!-- Intro -->
+                  <li class="nav-item g-mx-10--lg g-mx-15--xl">
+                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Intro</a>
+                  </li>
+                  <li class="nav-item g-mx-10--lg g-mx-15--xl">
+                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Product</a>
+                  </li>
+                  <li class="nav-item g-mx-10--lg g-mx-15--xl">
+                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Brand</a>
+                  </li>
+                  <li class="nav-item g-mx-10--lg g-mx-15--xl">
+                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Events</a>
+                  </li>
+                  
+                  <!-- End Intro -->
+
+            
                 </ul>
-            </div>
+              </div>
+              <!-- End Navigation -->
 
+              <div class="d-inline-block hidden-xs-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
+                <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15" href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697" target="_blank">Join Us!</a>
+              </div>
+            </div>
+          </nav>
         </div>
-    </nav>
-
-    <div id="myCarousel" class="carousel slide">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="{% static 'image/jingpai/9.png' %}" alt="1st"/>
+      </header>
+      <!-- End Header -->
+      
+      <!-- Promo Block -->
+      <section class="container g-pt-50">
+        <div class="u-shadow-v24 g-bg-white rounded g-pa-20">
+          <div class="g-bg-cover g-bg-img-hero g-bg-black-opacity-0_1--after g-px-20 g-py-200" style="background-image: url({% static 'image/jingpai/9.png' %});">
+            <div class="text-center g-pos-rel g-z-index-1">
+              <span class="d-block g-color-white g-font-size-20 text-uppercase g-letter-spacing-5 g-mb-50">Jing Liquer !!!</span>
+              <h1 class="d-inline-block g-brd-around g-brd-2 g-brd-white g-color-white g-font-weight-700 g-font-size-20 g-font-size-50--md text-uppercase g-line-height-1_2 g-letter-spacing-5 g-py-12 g-px-20 g-mb-50">Male Tonic</h1>
+              <p class="g-color-white g-font-size-20 text-uppercase g-letter-spacing-5 mb-0">good for health</p>
             </div>
-            <div class="item">
-                <img src="{% static 'image/jingpai/12.png' %}" alt="2nd"/>
-            </div>
-            <div class="item">
-                <img src="{% static 'image/jingpai/16.png' %}" alt="3rd"/>
-            </div>
-            <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="carousel-control right" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+          </div>
         </div>
-    </div>
+      </section>
+      <!-- End Promo Block -->
+   
 
-    <div class="tab1">
-        <div class="container">
-            <h2 class="tab-h2">Jing Product</h2>
-            <p class="tab-p">Jing: Male Tonic</p>
-            <!--劲酒描述-->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="media">
-                        <div class="media-left">
-                            <a href="#">
-                                <img src="{% static 'image/jingpai/product-jingjiu.jpg' %}" alt="jing liquor" class="media-object">
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">JING Liqueur</h4>
-                            <p>
-                                JING Liqueur is lskdjfsl  sldfjslf aldjflsf slfjdslkfj sldfjsldfjsd
-                                slflfjsdljfsdlf  slfjklsdjflsjf lsjflsdkfjdslfj  lskjflksdjfs fslf j
-                                slfjdksjfsljfdsklfjlsjf sljfkldsjf lsjflkdsjfsd fsldfjslf
-                                slfjdsklfj sdlfjldsjfsjlsjflkdsjfslfjldsjf lsjflksjf
-                            </p>
-                            <p>
-                                jlsjfkldsjflkdsjflkdsjflkj dslkjflkdsjf sdfjldkfj
-                                ldfjdskljf dlkfjdklsjf slfjsdlkfj dslfjdslkjf lsjflsdj
-                                dlfjsdklfj sdlfjlsdjf sldjfldsjf sldfjlksdjf sdlfjs lf
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--药材介绍-->
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="col-md-4">yao cai tu pian</div>
-                    <div class="col-md-8">yao cai jie shao</div>
-                </div>
+      <a class="js-go-to u-go-to-v1" href="#"
+         data-type="fixed"
+         data-position='{
+           "bottom": 15,
+           "right": 15
+         }'
+         data-offset-top="400"
+         data-compensation="#js-header"
+         data-show-effect="zoomIn">
+        <i class="hs-icon hs-icon-arrow-top"></i>
+      </a>
+    </main>
 
-                <div class="col-md-4">
-                    <div class="col-md-4">yao cai tu pian</div>
-                    <div class="col-md-8">yao cai jie shao</div>
-                </div>
+    <!-- JS Global Compulsory -->
+    <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/jquery-migrate/jquery-migrate.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/jquery.easing/js/jquery.easing.js' %}"></script>
+    <script src="{% static 'assets/vendor/tether.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/bootstrap/bootstrap.min.js' %}"></script>
 
-                <div class="col-md-4">
-                    <div class="col-md-4">yao cai tu pian</div>
-                    <div class="col-md-8">yao cai jie shao</div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- JS Implementing Plugins -->
+    <script src="{% static 'assets/vendor/hs-megamenu/src/hs.megamenu.js' %}"></script>
+    <script src="{% static 'assets/vendor/dzsparallaxer/dzsparallaxer.js' %}"></script>
+    <script src="{% static 'assets/vendor/dzsparallaxer/dzsscroller/scroller.js' %}"></script>
+    <script src="{% static 'assets/vendor/dzsparallaxer/advancedscroller/plugin.js' %}"></script>
+    <script src="{% static 'assets/vendor/chosen/chosen.jquery.js' %}"></script>
+    <script src="{% static 'assets/vendor/image-select/src/ImageSelect.jquery.js' %}"></script>
+    <script src="{% static 'assets/vendor/masonry/dist/masonry.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/slick-carousel/slick/slick.js' %}"></script>
 
-    {% if events %}
-        {% for event in events %}
-        <h1>{{ event.name }}</h1>>
-        <p>{{ event.date }}</p>
-        <p>{{ event.des }}</p>
-        <img src="{{ MEDIA_URL }}{{ event.img }}" alt="{{ event.name }}"/>
-        {% endfor %}
-    {% else%}
-        <p>there is no events</p>
-    {% endif %}
+    <!-- JS Unify -->
+    <script src="{% static 'assets/js/hs.core.js' %}"></script>
+    <script src="{% static 'assets/js/components/hs.header.js' %}"></script>
+    <script src="{% static 'assets/js/helpers/hs.hamburgers.js' %}"></script>
+    <script src="{% static 'assets/js/components/hs.scroll-nav.js' %}"></script>
+    <script src="{% static 'assets/js/components/hs.go-to.js' %}"></script>
+    <script src="{% static 'assets/js/components/hs.sticky-block.js' %}"></script>
+    <script src="{% static 'assets/js/helpers/hs.height-calc.js' %}"></script>
+    <script src="{% static 'assets/js/components/hs.carousel.js' %}"></script>
 
+    <!-- JS Custom -->
+    <script src="{% static 'assets/js/custom.js' %}"></script>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- JS Plugins Init. -->
+    <script>
+      $(document).on('ready', function () {
+        // initialization of carousel
+        $.HSCore.components.HSCarousel.init('.js-carousel');
 
-        <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="https://getbootstrap.com/docs/3.3/assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+        $('#carousel1').slick('setOption', 'responsive', [{
+          breakpoint: 1200,
+          settings: {
+            slidesToShow: 3
+          }
+        }, {
+          breakpoint: 992,
+          settings: {
+            slidesToShow: 2
+          }
+        }, {
+          breakpoint: 768,
+          settings: {
+            slidesToShow: 2
+          }
+        }, {
+          breakpoint: 576,
+          settings: {
+            slidesToShow: 1
+          }
+        }, {
+          breakpoint: 446,
+          settings: {
+            slidesToShow: 1
+          }
+        }], true);
 
+        // Header
+        $.HSCore.components.HSHeader.init($('#js-header'));
+        $.HSCore.helpers.HSHamburgers.init('.hamburger');
+
+        // initialization of HSMegaMenu plugin
+        $('.js-mega-menu').HSMegaMenu({
+          event: 'hover',
+          pageContainer: $('.container'),
+          breakpoint: 991
+        });
+
+        // initialization of go to
+        $.HSCore.components.HSGoTo.init('.js-go-to');
+
+        $.HSCore.helpers.HSHeightCalc.init();
+      });
+
+      $(window).on('load', function () {
+        // initialization of HSScrollNav
+        $.HSCore.components.HSScrollNav.init($('#js-scroll-nav'), {
+          duration: 700,
+          easing: 'easeOutExpo',
+          over: $('.u-secondary-navigation')
+        });
+
+        // initialization of masonry.js
+        $('.masonry-grid').imagesLoaded().then(function () {
+          $('.masonry-grid').masonry({
+            // options
+            columnWidth: '.masonry-grid-sizer',
+            itemSelector: '.masonry-grid-item',
+            percentPosition: true
+          });
+        });
+
+        // initialization of sticky blocks
+        $.HSCore.components.HSStickyBlock.init('.js-sticky-block');
+      });
+    </script>
+
+    <script>
+      // Facebook Like
+      window.fbAsyncInit = function () {
+        // init the FB JS SDK
+        FB.init({
+          appId: '1972702999621713',
+          status: true,
+          xfbml: true,
+          version: 'v2.3'
+        });
+        if (typeof gaSocialTracking != 'undefined') gaSocialTracking.trackFacebook();
+        setTimeout(function () {
+          if (typeof window.fbCallback == 'function') {
+            window.fbCallback();
+          }
+        }, 3000); // to make sure FB was loaded
+      };
+      (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+      // Facebook Like
+
+      // Twitter Follow
+      window.twttr = (function (d, s, id) {
+        var t, js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js, fjs);
+        return window.twttr || (t = {
+          _e: [], ready: function (f) {
+            t._e.push(f)
+          }
+        });
+      }(document, "script", "twitter-wjs"));
+      twttr.ready(function (twttr) {
+        twttr.events.bind('tweet', function (event) {
+          if (typeof gaSocialTracking != 'undefined') gaSocialTracking.trackTwitter();
+        });
+      });
+      // Twitter Follow
+    </script>
+  </body>
 </html>
