--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -116,6 +116,127 @@
         </div>
       </section>
       <!-- End Promo Block -->
+      
+      <!--product block-->
+      <section class="container g-pt-100 g-pb-40">
+        <div class="row justify-content-between">
+          <div class="col-lg-5 flex-lg-unordered g-mt-50--lg g-mb-60">
+            <div class="mb-2">
+              <div class="d-inline-block g-width-20 g-height-2 g-pos-rel g-top-minus-4 g-bg-primary mr-2"></div>
+              <span class="g-color-gray-dark-v3 g-font-weight-600 g-font-size-12 text-uppercase">Product</span>
+            </div>
+            <h2 class="h1 g-color-black g-font-weight-600 g-mb-35">
+              <span class="g-color-primary">Jing Liqueur</span></h2>
+            <p class="g-font-size-17">JING Liqueur is a subtle alchemy of many kinds of lants and spices formulated according to the principles of Chinese traditional medicine to achieve the harmonious balance of the Yin and Yang. </p>
+            <p class="g-font-size-17 mb-4">Essences of herbs and spices are extracted and blended synergistically into the liquor base, giving Jing Liqueur the distinctive aroma, appearance, taste, and health benefits.</p>
+
+            <a class="g-font-weight-600" href="#component">
+              The Composition component
+              <span class="align-middle u-icon-v3 g-pos-rel g-top-minus-2 g-width-20 g-height-20 g-color-white g-bg-primary g-font-size-12 rounded-circle ml-3">
+                <i class="fa fa-angle-right"></i>
+              </span>
+            </a>
+          </div>
+
+          <div class="col-lg-6 flex-lg-first g-mb-60">
+            <div class="masonry-grid row g-mx-minus-5">
+              <div class="masonry-grid-sizer col-sm-1"></div>
+
+              <div class="masonry-grid-item col-sm-5 g-px-5 g-mb-10">
+                <img class="img-fluid w-100" src="{% static 'image/jingpai/product/1.jpg' %}" alt="Image description">
+              </div>
+              
+              <div class="masonry-grid-item col-sm-5 g-px-5 g-mb-10">
+                <img class="img-fluid w-100" src="{% static 'image/jingpai/product/2.jpg' %}" alt="Image description">
+              </div>
+              
+              <div class="masonry-grid-item col-sm-5 g-px-5 g-mb-10">
+                <img class="img-fluid w-100" src="{% static 'image/jingpai/product/3.jpg' %}" alt="Image description">
+              </div>
+              
+              <div class="masonry-grid-item col-sm-5 g-px-5 g-mb-10">
+                <img class="img-fluid w-100" src="{% static 'image/jingpai/product/4.jpg' %}" alt="Image description">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--end of product block-->
+      
+      <!--component block-->
+      <section class="g-brd-bottom g-brd-gray-light-v4" id="component">
+        <div class="container g-py-100">
+          <h2 class="g-color-black g-font-weight-600 text-center g-mb-60">The Composition component</h2>
+
+          <!-- Icon Blocks -->
+          <div class="row no-gutters g-mb-50">
+            <div class="col-sm-6 col-lg-3">
+              <!-- Icon Blocks -->
+              <div class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v4 g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50">
+                <span class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">01</span>
+                <span class="u-icon-v3 u-shadow-v24 g-bg-white g-color-primary rounded-circle mb-4">
+                  <img src="{% static 'image/jingpai/component/yam.jpg' %}" alt="yam" class="u-line-icon-pro" style="height: 35px;">
+                </span>
+                <h3 class="h5 g-color-black g-font-weight-600 mb-3">YAM</h3>
+                <p class="g-color-gray-dark-v4">Can help alleviate eating disorders, coughs and lung deficiencies. Also helps strengthen the spleen and stomach, invigoration the Qi</p>
+              </div>
+              <!-- End Icon Blocks -->
+            </div>
+            
+            <div class="col-sm-6 col-lg-3">
+              <!-- Icon Blocks -->
+              <div class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v4 g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50">
+                <span class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">02</span>
+                <span class="u-icon-v3 u-shadow-v24 g-bg-white g-color-primary rounded-circle mb-4">
+                  <img src="{% static 'image/jingpai/component/wolfberry.jpg' %}" alt="wolfberry" class="u-line-icon-pro" style="height: 35px;">
+                </span>
+                <h3 class="h5 g-color-black g-font-weight-600 mb-3">WOLFBERRY</h3>
+                <p class="g-color-gray-dark-v4">Natural aphrodisiac, improves sexual function. Also, beneficial for the blood, liver and eyes.</p>
+              </div>
+              <!-- End Icon Blocks -->
+            </div>
+            
+            <div class="col-sm-6 col-lg-3">
+              <!-- Icon Blocks -->
+              <div class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v4 g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50">
+                <span class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">03</span>
+                <span class="u-icon-v3 u-shadow-v24 g-bg-white g-color-primary rounded-circle mb-4">
+                  <img src="{% static 'image/jingpai/component/cinnamon.jpeg' %}" alt="cinnamon" class="u-line-icon-pro" style="height: 35px;">
+                </span>
+                <h3 class="h5 g-color-black g-font-weight-600 mb-3">CINNAMON</h3>
+                <p class="g-color-gray-dark-v4">Sooths stomach aches, kidney deficiencies and bloating. It enhances the Yang, dispels cold and relieves pain.</p>
+              </div>
+              <!-- End Icon Blocks -->
+            </div>
+            
+            <div class="col-sm-6 col-lg-3">
+              <!-- Icon Blocks -->
+              <div class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v4 g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50">
+                <span class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">04</span>
+                <span class="u-icon-v3 u-shadow-v24 g-bg-white g-color-primary rounded-circle mb-4">
+                  <img src="{% static 'image/jingpai/component/cloves.jpeg' %}" alt="cloves" class="u-line-icon-pro" style="height: 35px;">
+                </span>
+                <h3 class="h5 g-color-black g-font-weight-600 mb-3">CLOVES</h3>
+                <p class="g-color-gray-dark-v4">Relieves colds, chest and abdominal pains. Enhances the Yang.</p>
+              </div>
+              <!-- End Icon Blocks -->
+            </div>
+            
+       
+
+            
+          </div>
+          <!-- End Icon Blocks -->
+
+          <div class="text-center">
+            <p class="g-rounded-50 g-pl-25 g-pr-20 g-py-12 g-px-25">
+              <span class="g-pos-rel g-top-2">Other herbs: Angelica, Ginseng, Radix Puerariae, Poria cocos, Jujube, Maca powder</span>
+            </p>
+          </div>
+        </div>
+      </section>
+      <!--end of componet block-->
    
 
       <a class="js-go-to u-go-to-v1" href="#"
