--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -75,16 +75,16 @@
                 <ul class="navbar-nav text-uppercase g-pos-rel g-font-weight-600 ml-auto">
                   <!-- Intro -->
                   <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Intro</a>
+                    <a href="#" class="nav-link g-py-7 g-px-0">Intro</a>
                   </li>
                   <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Product</a>
+                    <a href="#" class="nav-link g-py-7 g-px-0">Product</a>
                   </li>
                   <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Brand</a>
+                    <a href="#" class="nav-link g-py-7 g-px-0">Brand</a>
                   </li>
                   <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                    <a href="../../index.html" class="nav-link g-py-7 g-px-0">Events</a>
+                    <a href="#" class="nav-link g-py-7 g-px-0">Events</a>
                   </li>
                   
                   <!-- End Intro -->
@@ -95,7 +95,7 @@
               <!-- End Navigation -->
 
               <div class="d-inline-block hidden-xs-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
-                <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15" href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697" target="_blank">Join Us!</a>
+                <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15" href="#" target="_blank">Contact Us</a>
               </div>
             </div>
           </nav>
@@ -106,11 +106,11 @@
       <!-- Promo Block -->
       <section class="container g-pt-50">
         <div class="u-shadow-v24 g-bg-white rounded g-pa-20">
-          <div class="g-bg-cover g-bg-img-hero g-bg-black-opacity-0_1--after g-px-20 g-py-200" style="background-image: url({% static 'image/jingpai/9.png' %});">
+          <div class="g-bg-cover g-bg-img-hero g-bg-black-opacity-0_1--after g-px-20 g-py-200" style="background-image: url({% static 'image/jingpai/jingjiu.jpg' %});">
             <div class="text-center g-pos-rel g-z-index-1">
-              <span class="d-block g-color-white g-font-size-20 text-uppercase g-letter-spacing-5 g-mb-50">Jing Liquer !!!</span>
-              <h1 class="d-inline-block g-brd-around g-brd-2 g-brd-white g-color-white g-font-weight-700 g-font-size-20 g-font-size-50--md text-uppercase g-line-height-1_2 g-letter-spacing-5 g-py-12 g-px-20 g-mb-50">Male Tonic</h1>
-              <p class="g-color-white g-font-size-20 text-uppercase g-letter-spacing-5 mb-0">good for health</p>
+              <span class="d-block g-color-white g-font-size-20 text-uppercase g-letter-spacing-5 g-mb-50">Welcome To</span>
+              <h1 class="d-inline-block g-brd-around g-brd-2 g-brd-white g-color-white g-font-weight-700 g-font-size-20 g-font-size-50--md text-uppercase g-line-height-1_2 g-letter-spacing-5 g-py-12 g-px-20 g-mb-50">JING Liqueur</h1>
+              <p class="g-color-white g-font-size-20 text-uppercase g-letter-spacing-5 mb-0">Male Tonic</p>
             </div>
           </div>
         </div>
@@ -351,41 +351,41 @@
                 <h2 class="u-heading-v2__title h6 text-uppercase mb-0">About Us</h2>
               </div>
 
-              <p>About Unify dolor sit amet, consectetur adipiscing elit. Maecenas eget nisl id libero tincidunt sodales.</p>
+              <p>Oriental Drinks Ltd is the official agency of JING Brand in United Kindom.</p>
             </div>
             <!-- End Footer Content -->
 
             <!-- Footer Content -->
-            <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
-              <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
-                <h2 class="u-heading-v2__title h6 text-uppercase mb-0">Latest Posts</h2>
-              </div>
+            <!--<div class="col-lg-3 col-md-6 g-mb-40 g-mb-0&#45;&#45;lg">-->
+              <!--<div class="u-heading-v2-3&#45;&#45;bottom g-brd-white-opacity-0_8 g-mb-20">-->
+                <!--<h2 class="u-heading-v2__title h6 text-uppercase mb-0">Latest Posts</h2>-->
+              <!--</div>-->
 
-              <article>
-                <h3 class="h6 g-mb-2">
-                  <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Incredible template</a>
-                </h3>
-                <div class="small g-color-white-opacity-0_6">May 8, 2017</div>
-              </article>
+              <!--<article>-->
+                <!--<h3 class="h6 g-mb-2">-->
+                  <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">Incredible template</a>-->
+                <!--</h3>-->
+                <!--<div class="small g-color-white-opacity-0_6">May 8, 2017</div>-->
+              <!--</article>-->
 
-              <hr class="g-brd-white-opacity-0_1 g-my-10">
+              <!--<hr class="g-brd-white-opacity-0_1 g-my-10">-->
 
-              <article>
-                <h3 class="h6 g-mb-2">
-                  <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">New features</a>
-                </h3>
-                <div class="small g-color-white-opacity-0_6">June 23, 2017</div>
-              </article>
+              <!--<article>-->
+                <!--<h3 class="h6 g-mb-2">-->
+                  <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">New features</a>-->
+                <!--</h3>-->
+                <!--<div class="small g-color-white-opacity-0_6">June 23, 2017</div>-->
+              <!--</article>-->
 
-              <hr class="g-brd-white-opacity-0_1 g-my-10">
+              <!--<hr class="g-brd-white-opacity-0_1 g-my-10">-->
 
-              <article>
-                <h3 class="h6 g-mb-2">
-                  <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">New terms and conditions</a>
-                </h3>
-                <div class="small g-color-white-opacity-0_6">September 15, 2017</div>
-              </article>
-            </div>
+              <!--<article>-->
+                <!--<h3 class="h6 g-mb-2">-->
+                  <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">New terms and conditions</a>-->
+                <!--</h3>-->
+                <!--<div class="small g-color-white-opacity-0_6">September 15, 2017</div>-->
+              <!--</article>-->
+            <!--</div>-->
             <!-- End Footer Content -->
 
             <!-- Footer Content -->
@@ -404,25 +404,7 @@
                   </li>
                   <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                     <h4 class="h6 g-pr-20 mb-0">
-                      <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Portfolio</a>
-                      <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
-                    </h4>
-                  </li>
-                  <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
-                    <h4 class="h6 g-pr-20 mb-0">
-                      <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Our Services</a>
-                      <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
-                    </h4>
-                  </li>
-                  <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
-                    <h4 class="h6 g-pr-20 mb-0">
-                      <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Latest Jobs</a>
-                      <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
-                    </h4>
-                  </li>
-                  <li class="g-pos-rel g-py-10">
-                    <h4 class="h6 g-pr-20 mb-0">
-                      <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Contact Us</a>
+                      <a class="g-color-white-opacity-0_8 g-color-white--hover" href="http://www.jingpai.com">www.jingpai.com</a>
                       <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                     </h4>
                   </li>
@@ -445,7 +427,7 @@
                       <i class="fa fa-map-marker"></i>
                     </span>
                   </div>
-                  <p class="mb-0">795 Folsom Ave, Suite 600, <br> San Francisco, CA 94107 795</p>
+                  <p class="mb-0">38 Portland Road, London, UK, SE25 4PF.</p>
                 </div>
                 <!-- End Location -->
 
@@ -456,7 +438,7 @@
                       <i class="fa fa-phone"></i>
                     </span>
                   </div>
-                  <p class="mb-0">(+123) 456 7890 <br> (+123) 456 7891</p>
+                  <p class="mb-0">Tony: (+44) 07738407055</p>
                 </div>
                 <!-- End Phone -->
 
@@ -468,9 +450,7 @@
                     </span>
                   </div>
                   <p class="mb-0">
-                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="mailto:info@htmlstream.com">info@htmlstream.com</a>
-                    <br>
-                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">www.htmlstream.com</a>
+                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="mailto:info@htmlstream.com">info@orientaldrinks.com</a>
                   </p>
                 </div>
                 <!-- End Email and Website -->
@@ -489,29 +469,29 @@
             <div class="col-md-8 text-center text-md-left g-mb-10 g-mb-0--md">
               <div class="d-lg-flex">
                 <small class="d-block g-font-size-default g-mr-10 g-mb-10 g-mb-0--md">2017 © All Rights Reserved.</small>
-                <ul class="u-list-inline">
-                  <li class="list-inline-item">
-                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Privacy Policy</a>
-                  </li>
-                  <li class="list-inline-item">
-                    <span>|</span>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Terms of Use</a>
-                  </li>
-                  <li class="list-inline-item">
-                    <span>|</span>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">License</a>
-                  </li>
-                  <li class="list-inline-item">
-                    <span>|</span>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Support</a>
-                  </li>
-                </ul>
+                <!--<ul class="u-list-inline">-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">Privacy Policy</a>-->
+                  <!--</li>-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<span>|</span>-->
+                  <!--</li>-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">Terms of Use</a>-->
+                  <!--</li>-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<span>|</span>-->
+                  <!--</li>-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">License</a>-->
+                  <!--</li>-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<span>|</span>-->
+                  <!--</li>-->
+                  <!--<li class="list-inline-item">-->
+                    <!--<a class="g-color-white-opacity-0_8 g-color-white&#45;&#45;hover" href="#">Support</a>-->
+                  <!--</li>-->
+                <!--</ul>-->
               </div>
             </div>
 
