--- a/website/testfield/templates/jingpai/index.html
+++ b/website/testfield/templates/jingpai/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
     <head>
         <!-- Title -->
-        <title>Unify - Responsive Website Template</title>
+        <title>Chinese JING Liqueur</title>
 
         <!-- Required Meta Tags Always Come First -->
         <meta charset="utf-8">
